TEST_PROGRAMS/INVALID/08/badLvalueIncDec.go
package main;
func main(){
    x, y := 0, 1;
    (x+1)++;
}
